--- a/assets/sass/components/_testimonials.scss
+++ b/assets/sass/components/_testimonials.scss
@@ -3,40 +3,42 @@
     justify-content: center;
     align-items: center;
     padding: 2rem;
-  
-    &__container {
-      display: flex;
-      justify-content: space-around;
-      align-items: center;
-      width: 100%;
-      max-width: 1200px;
-      flex-wrap: nowrap;      
-    }
-  
-   
-      &__img {
-        max-width: 80px;     
-        height: 80px;      
-        border-radius: 100%; 
-        object-fit: cover;  
-        margin-bottom: 1rem;
-      }
-  
-      &__body {
-        padding: 0 1rem;
-      }
-  
-      &__title {
-        font-size: 1.25rem;
-        font-weight: bold;
-        margin-bottom: 0.5rem;
-        color: #a08e66;
 
-      }
-  
-      &__text {
-        font-size: 1rem;
-        color: #a08e66;
-      }
+    &__container {
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        width: 100%;
+        max-width: 1200px;
+        flex-wrap: nowrap;
     }
-  
+
+    &__img {
+        width: 80px;
+        height: 80px;
+        border-radius: 50%;
+        object-fit: cover;
+        margin-bottom: 1rem;
+    }
+
+    &__body {
+        padding: 0 1rem;
+    }
+
+    &__title {
+        font-size: 1rem;
+        font-weight: bold;
+        margin-bottom: 1rem; 
+        color: #a08e66;
+        font-style: italic; 
+        line-height: 1.8; 
+    }
+
+    &__text {
+        font-size: 0.875rem;
+        color: #a08e66;
+        font-style: italic;
+        line-height: 1.8; 
+        margin-bottom: 1rem;
+    }
+}
